[gd_scene load_steps=7 format=2]

[ext_resource path="res://Leaderboard/close button.png" type="Texture" id=1]
[ext_resource path="res://Leaderboard/LeaderboardCorrectnesssHUD.gd" type="Script" id=2]
[ext_resource path="res://Leaderboard/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 3 )

[node name="Leaderboard HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.85
anchor_top = 0.1
anchor_right = 0.85
anchor_bottom = 0.85
margin_left = -806.4
margin_top = -12.0
margin_right = 89.6
margin_bottom = 42.0
color = Color( 0.2, 0.196078, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="ColorRect"]
margin_left = 16.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 241.0
rect_scale = Vector2( 0.3, 0.3 )
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 8.0
margin_right = 159.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.247059, 0.556863, 0.572549, 1 )
text = "LEADERBOARD
<Correct Percentage>"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourRank" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -440.0
margin_top = 416.0
margin_right = -224.0
margin_bottom = 505.0
rect_pivot_offset = Vector2( 104, -8 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.247059, 0.556863, 0.572549, 1 )
text = "Your Rank: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourRankValue" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_top = 416.0
margin_right = -166.0
margin_bottom = 505.0
rect_pivot_offset = Vector2( 104, -8 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.247059, 0.556863, 0.572549, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouCorrectPercent" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -161.941
margin_top = 416.293
margin_right = 266.059
margin_bottom = 505.293
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.247059, 0.556863, 0.572549, 1 )
text = "Correct Percentage:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourCorrectPercentValue" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 212.74
margin_top = 417.707
margin_right = 285.74
margin_bottom = 506.707
rect_pivot_offset = Vector2( 104, -8 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.247059, 0.556863, 0.572549, 1 )
text = "0 %"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollBar" type="Panel" parent="ColorRect"]
anchor_top = 0.206
anchor_bottom = 0.206
margin_top = 0.175995
margin_right = 896.0
margin_bottom = 430.176
rect_scale = Vector2( 1, 0.742878 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/ScrollBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.10352e-05
margin_bottom = 12.0
rect_scale = Vector2( 1, 0.975379 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollBar/ScrollContainer"]
margin_bottom = 640.0
custom_constants/separation = 64

[node name="Control1" type="Control" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer"]

[node name="Rank" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control1"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "1."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control1"]
margin_left = 200.0
margin_top = 22.0
margin_right = 496.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "<STUDENT_NAME>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectPercent" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control1"]
margin_left = 584.0
margin_top = 22.0815
margin_right = 664.0
margin_bottom = 49.0815
custom_fonts/font = SubResource( 3 )
text = "<%>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 64.0
margin_bottom = 64.0

[node name="Rank" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control2"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "2."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control2"]
margin_left = 200.0
margin_top = 22.0
margin_right = 496.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "<STUDENT_NAME>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectPercent" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control2"]
margin_left = 584.0
margin_top = 22.0815
margin_right = 664.0
margin_bottom = 49.0815
custom_fonts/font = SubResource( 3 )
text = "<%>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 128.0
margin_bottom = 128.0

[node name="Rank" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control3"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "3."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control3"]
margin_left = 200.0
margin_top = 22.0
margin_right = 496.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "<STUDENT_NAME>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectPercent" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control3"]
margin_left = 584.0
margin_top = 22.0815
margin_right = 664.0
margin_bottom = 49.0815
custom_fonts/font = SubResource( 3 )
text = "<%>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="Control" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 192.0
margin_bottom = 192.0

[node name="Rank" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control4"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "4."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control4"]
margin_left = 200.0
margin_top = 22.0
margin_right = 496.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "<STUDENT_NAME>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectPercent" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control4"]
margin_left = 584.0
margin_top = 22.0815
margin_right = 664.0
margin_bottom = 49.0815
custom_fonts/font = SubResource( 3 )
text = "<%>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control5" type="Control" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 256.0
margin_bottom = 256.0

[node name="Rank" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control5"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "5."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control5"]
margin_left = 200.0
margin_top = 22.0
margin_right = 496.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "<STUDENT_NAME>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectPercent" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control5"]
margin_left = 584.0
margin_top = 22.0815
margin_right = 664.0
margin_bottom = 49.0815
custom_fonts/font = SubResource( 3 )
text = "<%>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control6" type="Control" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 320.0
margin_bottom = 320.0

[node name="Rank" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control6"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "6."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control6"]
margin_left = 200.0
margin_top = 22.0
margin_right = 496.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "<STUDENT_NAME>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectPercent" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control6"]
margin_left = 584.0
margin_top = 22.0815
margin_right = 664.0
margin_bottom = 49.0815
custom_fonts/font = SubResource( 3 )
text = "<%>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control7" type="Control" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 384.0
margin_bottom = 384.0

[node name="Rank" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control7"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "7."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control7"]
margin_left = 200.0
margin_top = 22.0
margin_right = 496.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "<STUDENT_NAME>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectPercent" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control7"]
margin_left = 584.0
margin_top = 22.0815
margin_right = 664.0
margin_bottom = 49.0815
custom_fonts/font = SubResource( 3 )
text = "<%>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control8" type="Control" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 448.0
margin_bottom = 448.0

[node name="Rank" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control8"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "8."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control8"]
margin_left = 200.0
margin_top = 22.0
margin_right = 496.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "<STUDENT_NAME>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectPercent" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control8"]
margin_left = 585.414
margin_top = 22.0815
margin_right = 665.414
margin_bottom = 49.0815
custom_fonts/font = SubResource( 3 )
text = "<%>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control9" type="Control" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 512.0
margin_bottom = 512.0

[node name="Rank" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control9"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "9."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control9"]
margin_left = 200.0
margin_top = 22.0
margin_right = 496.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "<STUDENT_NAME>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectPercent" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control9"]
margin_left = 584.0
margin_top = 22.0815
margin_right = 664.0
margin_bottom = 49.0815
custom_fonts/font = SubResource( 3 )
text = "<%>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control10" type="Control" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 576.0
margin_bottom = 576.0

[node name="Rank" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control10"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "10."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control10"]
margin_left = 200.0
margin_top = 22.0
margin_right = 496.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "<STUDENT_NAME>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectPercent" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Control10"]
margin_left = 584.0
margin_top = 22.0815
margin_right = 664.0
margin_bottom = 49.0815
custom_fonts/font = SubResource( 3 )
text = "<%>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="Control" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 640.0
margin_bottom = 640.0

[node name="Label" type="Label" parent="ColorRect/ScrollBar/ScrollContainer/VBoxContainer/Padding"]
margin_left = 128.0
margin_top = 0.364258
margin_right = 206.0
margin_bottom = 113.364
custom_fonts/font = SubResource( 2 )
text = "
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
